# stosim

./: .bazelrc  .gitignore  BUILD.bazel  bazel-bin  bazel-out  bazel-stosim  bazel-testlogs  build.sh  ross_p44.txt
src/: ch8_p10.cpp  ch8_p4.cpp  ch8_p6.cpp  ch8_p8.cpp  ch8_p9.cpp  ch9_p24a.cpp  ch9_p24b.cpp  ch9_p24c.cpp  ch9_p24d.cpp  nov7-bu.cpp  nov7.cpp  oct_10.cpp  oct_10_old.cpp  oct_17.cpp  p2a.cpp  p2b.cpp  p2c.cpp  p2d.cpp  p2e.cpp  ross_ch4.cpp  ross_p44.cpp  test_trapezoid.cpp  test_uniform.cpp
src/include/: mc_random.hpp  mc_sampling.hpp  mcrandom.hpp  numeric.hpp
src/include/mc_random/: Exponential.hpp  IntegrateMonteCarlo.hpp  LinearCongruential.hpp  Poisson.hpp  Uniform.hpp
src/past/: blah.cpp  ch7_p18.cpp  ch8_p10.cpp  ch8_p13.cpp  ch8_p15.cpp  ch9_p5.cpp  oct31.cpp  oct_10.cpp  oct_17.cpp  p7_8.cpp  test_uniform.cpp
src/test/: test_uniform.cpp
