cc_library(
    name = "stosim_lib",
    hdrs = [
        "src/include/mc_random.hpp",
        "src/include/mc_random/LinearCongruential.hpp",
        "src/include/mc_random/Uniform.hpp",
        "src/include/mc_random/Exponential.hpp",
        "src/include/mc_random/IntegrateMonteCarlo.hpp",
        "src/include/mc_random/Poisson.hpp",
        "src/include/numeric.hpp",
    ],
)

cc_binary(
    name = "test",
    srcs = [
        "src/test/test_uniform.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw10",
    srcs = [
        "src/ch8_p10.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw13",
    srcs = [
        "src/ch8_p13.cpp",
    ],
    deps = [":stosim_lib"],
)

