cc_library(
    name = "stosim_lib",
    hdrs = [
        "src/include/mc_random.hpp",
        "src/include/mc_random/LinearCongruential.hpp",
        "src/include/mc_random/Uniform.hpp",
        "src/include/mc_random/Exponential.hpp",
        "src/include/mc_random/IntegrateMonteCarlo.hpp",
        "src/include/mc_random/Poisson.hpp",
        "src/include/numeric.hpp",
    ],
)

cc_binary(
    name = "test",
    srcs = [
        "src/test/test_uniform.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw1",
    srcs = [
        "src/ch9_p1.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2",
    srcs = [
        "src/ch9_p2.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw3",
    srcs = [
        "src/ch9_p3.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw4",
    srcs = [
        "src/ch9_p4.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw5",
    srcs = [
        "src/ch9_p5.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw9",
    srcs = [
        "src/ch9_p9.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw14",
    srcs = [
        "src/ch9_p14.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw15",
    srcs = [
        "src/ch9_p15.cpp",
    ],
    deps = [":stosim_lib"],
)

