cc_library(
    name = "stosim_lib",
    hdrs = [
        "src/include/mc_random.hpp",
        "src/include/mc_random/LinearCongruential.hpp",
        "src/include/mc_random/Uniform.hpp",
        "src/include/mc_random/Exponential.hpp",
        "src/include/mc_random/IntegrateMonteCarlo.hpp",
        "src/include/mc_random/Poisson.hpp",
        "src/include/numeric.hpp",
    ],
)

cc_binary(
    name = "test",
    srcs = [
        "src/test/test_uniform.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw24a",
    srcs = [
        "src/ch9_p24a.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw24b",
    srcs = [
        "src/ch9_p24b.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw24c",
    srcs = [
        "src/ch9_p24c.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw24d",
    srcs = [
        "src/ch9_p24d.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2a",
    srcs = [
        "src/p2a.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2b",
    srcs = [
        "src/p2b.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2c",
    srcs = [
        "src/p2c.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2d",
    srcs = [
        "src/p2d.cpp",
    ],
    deps = [":stosim_lib"],
)

cc_binary(
    name = "hw2e",
    srcs = [
        "src/p2e.cpp",
    ],
    deps = [":stosim_lib"],
)

